deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noerelay
spec:
  selector:
    app: noerelay
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
